--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern",
+  "name": "HouseWork",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -22,7 +22,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
-    "mongoose": "^5.3.16",
     "if-env": "^1.0.4"
   }
 }
