switched auth to House, added jump table

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "password": "root",
+    "database": "home_work",
+    "host": "3306",
     "dialect": "mysql"
   },
   "test": {
