--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "cookieparser": "^0.1.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
