--- a/config/config.json
+++ b/config/config.json
@@ -2,8 +2,9 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "home_work",
-    "host": "3306",
+    "database": "house_work",
+    "host": "localhost",
+    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
