--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cookieparser": "^0.1.0",
+    "create-react-context": "^0.2.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "mdbreact": "^4.11.1",
+    "mongoose": "^5.3.16",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-bootstrap": "^1.0.0-beta.6",
     "sequelize": "^5.1.0",
-    "sequelize-cli": "^5.4.0",
-    "create-react-context": "^0.2.3",
-    "mongoose": "^5.3.16"
+    "sequelize-cli": "^5.4.0"
   }
 }
