--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "create-react-context": "^0.2.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "js-cookie": "^2.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.3.16",
     "mysql": "^2.16.0",
