--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "history": "^4.9.0",
+    "mdbreact": "^4.12.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.6.3",
