--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-materialize": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
