--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,13 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
-    "react-materialize": "^3.0.4"
+    "react-materialize": "^3.0.4",
+    "semantic-ui-react": "^0.86.0",
+    "prop-types": "^15.7.2",
+    "create-react-context": "^0.2.3"
+
+
+
   },
   "scripts": {
     "start": "react-scripts start",
